--- a/QuanLyChiTieu/Base.lproj/Main.storyboard
+++ b/QuanLyChiTieu/Base.lproj/Main.storyboard
@@ -722,9 +722,60 @@
                     <view key="view" contentMode="scaleToFill" id="SsG-Qu-pLZ">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MaX-hx-MC0">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tiền lương" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yd1-0Y-yk2">
+                                        <rect key="frame" x="146.66666666666666" y="56" width="100" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="b1p-Ec-uxI"/>
+                                            <constraint firstAttribute="width" constant="100" id="nmt-TK-TSC"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3sz-L9-H9c">
+                                        <rect key="frame" x="20" y="56" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="JGu-7G-AfG"/>
+                                            <constraint firstAttribute="height" constant="24" id="fA7-V9-evw"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="back"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="3sz-L9-H9c" firstAttribute="leading" secondItem="MaX-hx-MC0" secondAttribute="leading" constant="20" id="7c5-91-49D"/>
+                                    <constraint firstAttribute="height" constant="100" id="8n8-zy-GnZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="Yd1-0Y-yk2" secondAttribute="bottom" constant="20" id="c79-hS-IPH"/>
+                                    <constraint firstItem="Yd1-0Y-yk2" firstAttribute="centerX" secondItem="MaX-hx-MC0" secondAttribute="centerX" id="cOb-Qf-ePr"/>
+                                    <constraint firstAttribute="bottom" secondItem="3sz-L9-H9c" secondAttribute="bottom" constant="20" id="pec-iS-Bvx"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rgZ-9r-YqE">
+                                <rect key="frame" x="0.0" y="100" width="393" height="718"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Klo-FM-aMe"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rgZ-9r-YqE" firstAttribute="leading" secondItem="Klo-FM-aMe" secondAttribute="leading" id="0NN-Uc-MbM"/>
+                            <constraint firstItem="Klo-FM-aMe" firstAttribute="trailing" secondItem="rgZ-9r-YqE" secondAttribute="trailing" id="7iP-u7-Bts"/>
+                            <constraint firstItem="rgZ-9r-YqE" firstAttribute="top" secondItem="MaX-hx-MC0" secondAttribute="bottom" id="JSK-Mw-PEO"/>
+                            <constraint firstItem="MaX-hx-MC0" firstAttribute="leading" secondItem="SsG-Qu-pLZ" secondAttribute="leading" id="XaW-HW-ihj"/>
+                            <constraint firstItem="Klo-FM-aMe" firstAttribute="bottom" secondItem="rgZ-9r-YqE" secondAttribute="bottom" id="ZCF-Bd-970"/>
+                            <constraint firstItem="Klo-FM-aMe" firstAttribute="trailing" secondItem="MaX-hx-MC0" secondAttribute="trailing" id="dRn-tQ-B1i"/>
+                            <constraint firstItem="MaX-hx-MC0" firstAttribute="top" secondItem="SsG-Qu-pLZ" secondAttribute="top" id="qnn-Xw-DQc"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="header" destination="Yd1-0Y-yk2" id="eVh-rD-GJG"/>
+                        <outlet property="incomeInfoTableView" destination="rgZ-9r-YqE" id="KFt-9v-3rL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ecX-LA-9zv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
