--- a/QuanLyChiTieu/Base.lproj/Main.storyboard
+++ b/QuanLyChiTieu/Base.lproj/Main.storyboard
@@ -18,20 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KEK-i3-MYq">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Rgm-96-ays">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="V2d-Gl-QIi">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ypg-bd-Ekf">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="YbN-ro-Ggn">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="M0g-KK-Mo0">
                                         <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xK9-Sc-Dvf">
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pPK-br-gbz">
                                             <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
@@ -42,12 +42,15 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KEK-i3-MYq" secondAttribute="bottom" id="4yZ-Nt-VJ7"/>
-                            <constraint firstItem="KEK-i3-MYq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JdC-4f-qX0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KEK-i3-MYq" secondAttribute="trailing" id="WuS-Rb-4Mg"/>
-                            <constraint firstItem="KEK-i3-MYq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rOr-km-3W7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Rgm-96-ays" secondAttribute="bottom" id="vjg-uD-ZmI"/>
+                            <constraint firstItem="Rgm-96-ays" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wUx-V6-p1g"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Rgm-96-ays" secondAttribute="trailing" id="xBP-9F-2E9"/>
+                            <constraint firstItem="Rgm-96-ays" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yqS-Rp-z09"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="Rgm-96-ays" id="5tI-fF-d13"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -71,10 +74,10 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dR0-RE-gdQ">
                                 <rect key="frame" x="20" y="229" width="353" height="589"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FB-Mv-FVI">
-                                        <rect key="frame" x="20" y="10" width="75" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đăng nhập" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FB-Mv-FVI">
+                                        <rect key="frame" x="20" y="10" width="150" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="75" id="XVA-au-FcY"/>
+                                            <constraint firstAttribute="width" constant="150" id="XVA-au-FcY"/>
                                             <constraint firstAttribute="height" constant="30" id="t0h-5B-puA"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
@@ -92,7 +95,8 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
-                                                    <action selector="editEmail:" destination="4Z6-nK-j1U" eventType="editingDidBegin" id="SSd-bP-hcR"/>
+                                                    <action selector="editEmailTxt:" destination="loS-OB-LvF" eventType="editingDidBegin" id="MZS-HQ-ESU"/>
+                                                    <action selector="showEmailValidate:" destination="loS-OB-LvF" eventType="editingDidEnd" id="JP0-8z-32c"/>
                                                 </connections>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ga8-Ve-XGj">
@@ -119,6 +123,10 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="313" height="35"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="editPasswordTxt:" destination="loS-OB-LvF" eventType="editingDidBegin" id="68J-gw-wCu"/>
+                                                            <action selector="showPasswordValidate:" destination="loS-OB-LvF" eventType="editingDidEnd" id="lW1-lt-haF"/>
+                                                        </connections>
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dG3-sO-va3">
                                                         <rect key="frame" x="283" y="0.0" width="30" height="35"/>
@@ -171,8 +179,11 @@
                                                 <state key="normal" image="checkbox">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="rememberAction:" destination="loS-OB-LvF" eventType="touchUpInside" id="kYA-ml-0sz"/>
+                                                </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fb-xi-wWL">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lưu tài khoản" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fb-xi-wWL">
                                                 <rect key="frame" x="24" y="0.0" width="197" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -188,18 +199,18 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xCo-Yb-ba3">
-                                        <rect key="frame" x="39.666666666666657" y="244" width="273.66666666666674" height="35"/>
+                                        <rect key="frame" x="49.333333333333329" y="244" width="254.66666666666669" height="35"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You don't have account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsF-LZ-Pvq">
-                                                <rect key="frame" x="0.0" y="0.0" width="186.66666666666666" height="35"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bạn chưa có tài khoản" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsF-LZ-Pvq">
+                                                <rect key="frame" x="0.0" y="0.0" width="167.66666666666666" height="35"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KPl-bQ-6gz">
-                                                <rect key="frame" x="186.66666666666669" y="0.0" width="87" height="35"/>
+                                                <rect key="frame" x="167.66666666666669" y="0.0" width="87" height="35"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Register"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Đăng ký"/>
                                                 <connections>
                                                     <action selector="registerAction:" destination="loS-OB-LvF" eventType="touchUpInside" id="jDN-C6-C0T"/>
                                                 </connections>
@@ -209,8 +220,8 @@
                                             <constraint firstAttribute="height" constant="35" id="auR-Ej-rIi"/>
                                         </constraints>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or login with" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qgH-Zi-qm6">
-                                        <rect key="frame" x="130" y="299" width="93" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đăng nhập bằng" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qgH-Zi-qm6">
+                                        <rect key="frame" x="113.66666666666666" y="299" width="126" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="6Cc-1p-Dtw"/>
                                         </constraints>
@@ -301,7 +312,7 @@
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Login">
+                                        <buttonConfiguration key="configuration" style="plain" title="Đăng nhập">
                                             <fontDescription key="titleFontDescription" type="boldSystem" pointSize="26"/>
                                         </buttonConfiguration>
                                         <connections>
@@ -362,7 +373,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nha-FG-7Tv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="4Z6-nK-j1U" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1110.6870229007634" y="-49.295774647887328"/>
         </scene>
