--- a/QuanLyChiTieu/Base.lproj/Main.storyboard
+++ b/QuanLyChiTieu/Base.lproj/Main.storyboard
@@ -853,7 +853,7 @@
                                     <segment title="Tháng hiện tại"/>
                                 </segments>
                                 <connections>
-                                    <action selector="convertTab:" destination="6P7-dW-VFp" eventType="valueChanged" id="pbH-GX-rTs"/>
+                                    <action selector="monthSegmentAction:" destination="6P7-dW-VFp" eventType="valueChanged" id="cP2-03-7Uo"/>
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="e9A-r6-xIl">
